BBC-330 Removing lastCommitDate