@@ -171,6 +171,7 @@
 				<version>3.5.2</version>
 				<extensions>true</extensions>
 				<configuration>
+				    <jvmArgs>-Xmx720m -XX:MaxPermSize=250m</jvmArgs>
 					<systemPropertyVariables>
 						<jira.websudo.is.disabled>true</jira.websudo.is.disabled>
 						<baseurl.jira>http://localhost:2990/jira</baseurl.jira>
